# yolo-voice

./: .gitignore  README.md  index.html  package-lock.json  package.json  pill.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE_REFACTOR_PLAN.md  CLEANUP_EVALUATION.md  COMPETITIVE_ANALYSIS.md  DICTIONARY_EVALUATION.md  MIGRATION_PLAN.md  MULTI_LANGUAGE_ROADMAP.md  PIPELINE_REGRESSION_PACK.md  PROJECT_SPEC.md  SEGMENTATION_JOIN_EVALUATION.md  STT_ENGINE_RESEARCH.md  TEXT_PIPELINE_EVALUATION.md  TRANSCRIPTION_REFINEMENT_PLAN.md  auto-update-plan.md  code-review-2026-07-18.md  product-polish-roadmap.md
docs/releases/: v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.7.0.md  v0.9.2.md  v0.9.3.md  v0.9.5.md  v0.9.6.md  v0.9.7.md  v0.9.8.md  v0.9.9.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.1.0.md  v1.1.1.md  v1.2.0.md
research/: aqua-voice-ux-research.md  competitive-analysis-report.md  design-system-recommendations.md  legal-commercial-go-to-market-2026-03-26.md  tech-stack-open-source-commercial-health-2026-03-26.md  ui-design-systems-reference.md
scripts/: evaluate_cleanup.py  evaluate_dictionary_rules.py  evaluate_pipeline_regressions.py  evaluate_segmentation_join.py  evaluate_text_pipeline.py  generate_icns.py  generate_sounds.py  prepare-sidecar.ps1
sidecar/: default_profiles.json  distil_whisper.py  requirements.txt  transcribe.py
sidecar/industry_packs/: general.json  legal.json  medical.json  software_engineering.json
src/: App.tsx  i18n.ts  main.tsx  pill-main.tsx  pill-styles.css  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi
src-tauri/resources/: default_profiles.json
src-tauri/resources/industry_packs/: finance.json
src-tauri/src/: audio.rs  commands.rs  config.rs  hotkey.rs  lib.rs  main.rs  recorder.rs  sidecar.rs  startup.rs  text_insert.rs  transcription.rs
src-tauri/src/app/: commands.rs  events.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/capture/: hotkey.rs  mod.rs  recorder.rs  screenshot.rs
src-tauri/src/features/diagnostics/: mod.rs
src-tauri/src/features/output/: mod.rs
src-tauri/src/features/settings/: mod.rs
src-tauri/src/features/speech/: accumulator.rs  cleanup.rs  cloud.rs  distil_whisper.rs  inference.rs  language.rs  llm.rs  mod.rs  profiles.rs  text_actions.rs  vad.rs  vision.rs  vocabulary.rs
src-tauri/src/infra/: fs_util.rs  mod.rs  model.rs  platform.rs  sidecar.rs  topmost_guard.rs
src/components/: EqualizerBars.tsx  ErrorBoundary.tsx  IndustryPackSelector.tsx  KeybindingInput.tsx  LLMSettings.tsx  MicSelector.tsx  ModelSelector.tsx  Pill.tsx  ProfileEditor.tsx  ReplacementRules.tsx  TextActionManager.tsx  Toast.tsx  VocabularyEditor.tsx  WaveformDisplay.tsx
src/contexts/: UpdaterContext.tsx
src/hooks/: useUpdater.ts
src/locales/: cs.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh-CN.json
src/pages/: About.tsx  Onboarding.tsx  Settings.tsx
src/shared/: platform.ts  types.ts
(+15 files in other folders)
