[package]
name = "yolo-voice"
version = "0.5.1"
description = "Windows offline voice dictation app"
authors = ["Alish"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yolo_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
rdev = "0.5"
hound = "3.5"
arboard = "3"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
regex = "1"
base64 = "0.22"
dirs-next = "2"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
]
