[package]
name = "yolo-voice"
version = "1.0.0"
description = "Offline voice dictation app"
authors = ["Alish Ermo Talif"]
edition = "2021"

[lib]
name = "yolo_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
cpal = "0.17"
rdev = "0.5"
hound = "3.5"
arboard = "3"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
regex = "1"
dirs-next = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
rubato = "0.16"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", default-features = false }
rodio = "0.19"
enigo = "0.3"
base64 = "0.22"

# ---- Windows-only dependencies ----
[target.'cfg(windows)'.dependencies]
parakeet-rs = { version = "0.3", features = ["directml"] }
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
]

# ---- macOS-only dependencies ----
[target.'cfg(target_os = "macos")'.dependencies]
parakeet-rs = { version = "0.3" }
cocoa = "0.26"
objc = "0.2"
keyring = { version = "3.6.3", features = ["apple-native"] }
